--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "dependencies": {
-    "@google/model-viewer": "^4.1.0",
-    "bcrypt": "^6.0.0",
-    "dotenv": "^16.5.0",
-    "jsonwebtoken": "^9.0.2"
+    "@google/model-viewer": "^4.1.0"
   }
 }
